src/test/deca/context/valid/class/return/no_return.deca
// Description:
//    Déclaration d'une fonction non void mais sans instruction return
//
// Resultats:
//    missing return instruction

class A {
	int a () {

	}
}

{
}

