src/test/deca/context/invalid/class/return/unexpected_return.deca
// Description:
//    Déclaration d'une fonction void mais avec instruction return
//
// Resultats:
//    instruction return in void method

class A {
	void a() {
		return 5;
	}
}

{
}

